# This file is part of the dune-hdd project:
#   http://users.dune-project.org/projects/dune-hdd
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

model_includedir = $(includedir)/dune/hdd/linearelliptic/model
model_includeHEADERS = default.hh interface.hh thermalblock.hh

SUBDIRS = affineparametric

include $(top_srcdir)/am/global-rules
