ADD_EXECUTABLE( examples_stationary_linear_elliptic_multiscale_semicontinuousgalerkin_dune_detailed_discretizations "dune_detailed_discretizations.cc" ${COMMON_HEADERS} )
TARGET_LINK_LIBRARIES( examples_stationary_linear_elliptic_multiscale_semicontinuousgalerkin_dune_detailed_discretizations ${COMMON_LIBS} )
